Исправил ошибку в CmakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
 set(IP_PROJECT_NAME        "IP_xlsx_creator")
 
 # Преобразование каждого небуквенно-циферного символа на входе в символ подчеркивания
-string(MAKE_C_IDENTIFIER ${IP_PROJECT_NAME} V1_PROJECT_ID)
+string(MAKE_C_IDENTIFIER ${IP_PROJECT_NAME} IP_PROJECT_NAME)
 # Изменение регистра на (ПРОПИСНЫЕ)
-string(TOUPPER           ${IP_PROJECT_NAME}   V1_PROJECT_ID)
+string(TOUPPER           ${IP_PROJECT_NAME} IP_PROJECT_NAME)
 
 # -------------- Определяет является ли данные проект подпроектом --------------
 if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
